# src/routes/Bike/Bike.routes.ts
@@ -1,5 +1,0 @@
-import { Hono } from "hono";
-
-const bikeRoute = new Hono().basePath("/bikes");
-
-app.post(":bikeId/rides");
